--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,15 @@ typings/
 
 # next.js build output
 .next
+
+# IDE and editor specific files #
+#################################
+nbproject
+.idea
+.buildpath
+.project
+.settings
+.tags
+.tags1
+tags
+*.launch
